# constructor-lite

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
tests/: compile_tests.rs  custom_constructor_name.rs  default.rs  option.rs  required.rs  simple.rs
tests/compile-fail/: no-default.rs  no-default.stderr
