[package]
name = "constructor-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.3"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"

[dev-dependencies]
trybuild = "1.0.77"
