[package]
name = "constructor-lite"
version = "0.1.0"
authors = ["d-k-bo <d-k-bo@mailbox.org>"]
edition = "2021"
description = "Generate minimal constructors for structs"
repository = "https://github.com/d-k-bo/constructor-lite"
license = "MIT"
keywords = ["derive", "macro", "constructor"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14.3"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"

[dev-dependencies]
trybuild = "1.0.77"
